# rust-analyzer-mcp

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: rust.yml
