[workspace]
members = [".", "test-support"]
exclude = ["test-project", "test-project-diagnostics"]

[package]
name = "rust-analyzer-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server for rust-analyzer integration"
authors = ["Zeeshan Ali Khan <zeenix@gmail.com>"]
license = "MIT"
repository = "https://github.com/zeenix/rust-analyzer-mcp"
keywords = ["mcp", "rust-analyzer", "language-server", "rust"]
categories = ["development-tools"]

[[bin]]
name = "rust-analyzer-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
which = "4.4"
home = "=0.5.5"  # Pinned to version compatible with older toolchains

[dev-dependencies]
# Test support library
test-support = { path = "test-support" }

# Core testing
tokio-test = "0.4"
assert_cmd = "2.0"          # For testing CLI behavior
predicates = "3.0"          # Assertion predicates

# Mocking and test doubles
mockall = "0.11"            # For creating mocks (older version compatible with 2023 toolchain)
wiremock = "0.5"            # HTTP/WebSocket mocking (older version compatible with 2023 toolchain)

# Property-based testing
proptest = "1.4"            # Property testing
arbitrary = "1.3"           # Arbitrary trait implementations

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Test utilities
tempfile = "3.8"            # Temporary directories for tests
test-log = "0.2"            # Capture logs in tests
rstest = "0.18"             # Parameterized tests (older version compatible with 2023 toolchain)
once_cell = "1.18"          # Lazy statics for test optimization

# JSON/Protocol testing
jsonschema = "0.16"         # JSON schema validation (older version compatible with 2023 toolchain)
serde_test = "1.0"          # Serde testing utilities

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "concurrent_requests"
harness = false

